# hypr-utils

./: Cargo.toml  README.md  flake.nix
src/: args.rs  main.rs  system.rs
src/store/: mod.rs
