[package]
name = "hypr-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive", "string"] }
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["serde_json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
xdg = "2.5.2"
